// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when closed 1`] = `
<OutsideClickHandler
  onClickOutside={[MockFunction]}
>
  <div
    className="dropdown"
  >
    <SearchBox
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      onKeyDown={[MockFunction]}
      placeholder="settings.search.placeholder"
      value=""
    />
  </div>
</OutsideClickHandler>
`;

exports[`should render correctly when open: no results 1`] = `
<OutsideClickHandler
  onClickOutside={[MockFunction]}
>
  <div
    className="dropdown"
  >
    <SearchBox
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      onKeyDown={[MockFunction]}
      placeholder="settings.search.placeholder"
      value=""
    />
    <DropdownOverlay
      noPadding={true}
    >
      <ul
        className="settings-search-results menu"
      >
        <div
          className="big-padded"
        >
          no_results
        </div>
      </ul>
    </DropdownOverlay>
  </div>
</OutsideClickHandler>
`;

exports[`should render correctly when open: results 1`] = `
<OutsideClickHandler
  onClickOutside={[MockFunction]}
>
  <div
    className="dropdown"
  >
    <SearchBox
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      onKeyDown={[MockFunction]}
      placeholder="settings.search.placeholder"
      value=""
    />
    <DropdownOverlay
      noPadding={true}
    >
      <ul
        className="settings-search-results menu"
      >
        <li
          className="spacer-bottom spacer-top"
          key="foo"
        >
          <ForwardRef(Link)
            onClick={[MockFunction]}
            onMouseEnter={[Function]}
            to={
              {
                "hash": "#foo",
                "pathname": "/admin/settings",
                "search": "?category=foo+category",
              }
            }
          >
            <div
              className="settings-search-result-title display-flex-space-between"
            >
              <h3>
                Foo!
              </h3>
            </div>
            <div
              className="note spacer-top"
            >
              settings.key_x.foo
            </div>
          </ForwardRef(Link)>
        </li>
        <li
          className="spacer-bottom spacer-top active"
          key="bar"
        >
          <ForwardRef(Link)
            onClick={[MockFunction]}
            onMouseEnter={[Function]}
            to={
              {
                "hash": "#bar",
                "pathname": "/admin/settings",
                "search": "?category=foo+category",
              }
            }
          >
            <div
              className="settings-search-result-title display-flex-space-between"
            >
              <h3>
                foo subCat
              </h3>
            </div>
            <div
              className="note spacer-top"
            >
              settings.key_x.bar
            </div>
          </ForwardRef(Link)>
        </li>
      </ul>
    </DropdownOverlay>
  </div>
</OutsideClickHandler>
`;
